design-principles-02/src/main/java/com/farhad/example/design_principles02/ocp/demo2/good/Payment.java
package com.farhad.example.design_principles02.ocp.demo2.good;

import lombok.Data;

@Data
public class Payment {

	private PaymentMethod paymentMethod;
}
