design-principles-02/src/main/java/com/farhad/example/design_principles02/ocp/demo2/bad/Payment.java
package com.farhad.example.design_principles02.ocp.demo2.bad;

import lombok.Data;

@Data
public class Payment {

	private PaymentMethod paymentMethod;
}
